# RTL876x3E-Common-SDK

./: CMakeLists.txt  Kconfig  Kconfig.RTL8763E.sdk  README.md
board/evb/: CMakeLists.txt
board/evb/audio_demo/: Kconfig  board.h
board/evb/ble_broadcaster/: Kconfig
board/evb/ble_bt5_central/: Kconfig  board.h
board/evb/ble_bt5_peripheral/: Kconfig  config.h
board/evb/ble_central/: Kconfig
board/evb/ble_dtm/: rtl87x3e_ble_dtm.uvprojx  rtl87x3e_ble_dtm_bank0.sct  version.h
board/evb/ble_observer/: Kconfig
board/evb/ble_observer/gcc/: CMakeLists.txt
board/evb/ble_peripheral/: Kconfig
board/evb/ble_scatternet/: Kconfig
board/evb/bt_audio/: Kconfig  board.h
board/evb/bt_audio_trx/: Kconfig  board.h  version.h
board/evb/bt_audio_trx/gcc/: CMakeLists.txt  app.ld  defconfig.RTL8763E.16M_bank0  defconfig.RTL8763E.16M_bank1  defconfig.RTL8763E.4M_bank0  defconfig.RTL8763E.4M_bank1
board/evb/bt_hid_demo/: Kconfig
board/evb/bt_iap_demo/: Kconfig
board/evb/bt_map_demo/: Kconfig
board/evb/bt_map_demo/gcc/: CMakeLists.txt
board/evb/bt_pan_demo/: Kconfig  board.h
board/evb/bt_pbap_demo/: Kconfig
board/evb/bt_spp_demo/: Kconfig
board/evb/gui_demo/: board.h  dual_bank_after_build.bat  menu_config.h  menu_config.py  rtl87x3e_before_build_script.bat  rtl87x3e_gui_demo.sct  rtl87x3e_gui_demo.uvprojx  version.h
board/evb/io_demo/: Kconfig  board.h
board/evb/io_demo/gcc/: CMakeLists.txt
board/evb/lcdc_demo/: board.h  rtl87x3e_lcdc_demo.sct  rtl87x3e_lcdc_demo.uvprojx  version.h
board/evb/lea_cap_acceptor/: Kconfig
board/evb/lea_cap_commander/: Kconfig
board/evb/lea_cap_initiator/: Kconfig
board/evb/lea_cap_initiator/gcc/: CMakeLists.txt  app.ld
board/evb/lib_template_demo/: Kconfig
board/evb/lib_template_demo/gcc/: CMakeLists.txt
board/evb/lwip_lib/: Kconfig  lwip_lib.uvprojx  lwip_lib_after_build.bat
board/evb/lwip_lib/gcc/: CMakeLists.txt
board/evb/mbedtls_lib/: Kconfig  mbedtls.uvoptx  mbedtls.uvprojx  mbedtls_after_build.bat
board/evb/mbedtls_lib/gcc/: CMakeLists.txt
board/evb/ota_demo/: Kconfig  board.h
board/evb/ota_demo/gcc/: CMakeLists.txt  app.ld
board/evb/usb_demo/: Kconfig  board.h
board/evb/usb_demo/gcc/: CMakeLists.txt  app_audio_rtl87x3e.ld  app_hid_rtl87x3e.ld
cmake/: build.cmake  compile.cmake  version_generate.cmake
doc/: RTL87X3E_MCU_SDK_Common_v3.13.0.95_Release_Note_0528.txt
docs/: api.md
inc/: CMakeLists.txt
inc/app/: CMakeLists.txt  app_msg.h  dfu_api.h
inc/ble_mgr/: CMakeLists.txt  ble_adv_data.h  ble_conn.h  ble_ext_adv.h  ble_mgr.h  ble_scan.h  bt_gatt_client.h  bt_gatt_svc.h  bt_syscall.h
inc/ble_mgr/bond/: bt_bond_api.h  bt_bond_common.h  bt_bond_le.h  bt_bond_le_sync.h  bt_bond_legacy.h
inc/bluetooth/: CMakeLists.txt
inc/bluetooth/gap/: CMakeLists.txt  ble_isoch_def.h  bt_direct_msg.h  bt_types.h  gap.h  gap_adv.h  gap_aox.h  gap_aox_conn.h  gap_aox_connless_receiver.h  gap_aox_connless_transmitter.h  gap_appearance.h  gap_big_mgr.h  gap_bond_le.h  gap_bond_manager.h  gap_br.h  gap_callback_le.h  gap_chann.h  gap_cig_mgr.h  gap_conn_le.h  gap_credit_based_conn.h  gap_dtm.h  gap_ecfc.h  gap_ext_adv.h  gap_ext_scan.h  gap_fix_chann_conn.h  gap_handover_br.h  gap_iso_data.h  gap_le.h  gap_le_types.h  gap_msg.h  gap_pa_adv.h  gap_pa_sync.h  gap_past_recipient.h  gap_past_sender.h  gap_privacy.h  gap_scan.h  gap_storage_br.h  gap_storage_le.h  gap_timer.h  gap_vendor.h  (+2 more)
inc/bluetooth/leaudio/: CMakeLists.txt  aics_client.h  aics_def.h  aics_mgr.h  ascs_def.h  ascs_mgr.h  bap.h  bap_unicast_client.h  base_data_generate.h  base_data_parse.h  bass_client.h  bass_def.h  bass_mgr.h  ble_audio.h  ble_audio_def.h  ble_audio_flags.h  ble_audio_group.h  ble_audio_sync.h  broadcast_source_sm.h  bt_bond_mgr.h  cap.h  ccp_client.h  ccp_def.h  ccp_mgr.h  codec_def.h  codec_qos.h  csis_client.h  csis_def.h  csis_mgr.h  csis_rsi.h  gmas_client.h  gmas_def.h  gmas_mgr.h  has_client.h  has_def.h  has_mgr.h  mcp_client.h  mcp_def.h  mcp_mgr.h  metadata_def.h  (+16 more)
inc/bluetooth/profile/: CMakeLists.txt  gatt.h  gatt_builtin_services.h  profile_client.h  profile_client_def.h  profile_client_ext.h  profile_server.h  profile_server_def.h  profile_server_ext.h
inc/filesystem/: CMakeLists.txt  audio_fs.h  audio_fs_decode.h  id3v2_tag.h  integer.h  mp3_parser.h  save_listen_tag.h
inc/framework/: CMakeLists.txt
inc/framework/audio/: CMakeLists.txt  anc.h  anc_tuning.h  audio.h  audio_passthrough.h  audio_pipe.h  audio_plugin.h  audio_probe.h  audio_route.h  audio_track.h  audio_type.h  audio_volume.h  eq.h  line_in.h  listen_save_buffer.h  nrec.h  ringtone.h  sidetone.h  tts.h  vad.h  voice_prompt.h  wdrc.h
inc/framework/bt/: CMakeLists.txt  bt_a2dp.h  bt_att.h  bt_avp.h  bt_avrcp.h  bt_hfp.h  bt_hfp_ag.h  bt_hid_device.h  bt_hid_host.h  bt_hid_parser.h  bt_iap.h  bt_map.h  bt_opp.h  bt_pan.h  bt_pbap.h  bt_rdtp.h  bt_rfc.h  bt_sdp.h  bt_spp.h  btm.h
inc/framework/console/: CMakeLists.txt  cli.h  console.h
inc/framework/remote/: CMakeLists.txt  remote.h
inc/framework/sys/: CMakeLists.txt  sysm.h
inc/hal/: CMakeLists.txt
inc/hal/audio/: anc_driver.h  audio_pad.h  bin_loader_driver.h  codec_driver.h  dsp_driver.h  dsp_shm.h  sport_driver.h
inc/hal/io/: hw_tim.h  pwm.h  sd_define.h
inc/hal/platform/: aon_wdg_ext.h  app_timer.h  crc32.h  crc8.h  ftl.h  ftl_ext.h  hal_debug.h  hmac.h  platform_ext.h  platform_secp160r1.h  pm.h  reset_reason.h  vector_table_ext.h  wdg.h
inc/hal/power/: charger_utils.h  dlps_util.h  ext_buck.h  power_debug.h
inc/rtl87x3e/: CMakeLists.txt
inc/rtl87x3e/hal/: aes_cbc_api.h  aes_cmac_api.h  bt_bond.h  cache.h  cfg_item_api.h  crash_handle_ext.h  fmc_api.h  fmc_api_ext.h  hal_def.h  img_ctrl_ext.h  io_assert.h  log_api.h  (+9 more)
inc/service/: CMakeLists.txt
inc/usb/: CMakeLists.txt  port_macro.h  usb_spec20.h  usb_utils.h  usb_ver.h
src/: CMakeLists.txt  Kconfig  hal.c  main.c
src/app/: CMakeLists.txt
src/ble/: CMakeLists.txt
src/mcu/: CMakeLists.txt
src/sample/: CMakeLists.txt  Kconfig
tool/Gadgets/: md5_generate.sh
trace/: rtl87x3e_rom_function_table.pickle
(+1826 files in other folders)
